# sheaf

./: .envrc  .formatter.exs  .gitignore  .prettierrc  AGENTS.md  Makefile  README.md  mix.exs  package.json  ws.pl
apps/sheaf_rdf_browser/: mix.exs
assets/: package.json
assets/css/: app.css
assets/js/: app.js  assistant_typewriter.js  block_preview.js  block_preview_anchor.js  copy_normalize.js  data_table.js  document_breadcrumb.js  knuth_plass.js  paragraph_editor.js  pretext_paragraphs.js  scroll_container.js  submit_shortcut.js  thesis_breadcrumb.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: ontology-labeling.md  quadlog-access-patterns.md  rdf-data-working-notes.md  rdf-ex.md  task-queue-plan.md
lib/: datalab.ex  docs.ex  quadlog.ex  sheaf.ex  sheaf_web.ex
lib/datalab/: document.ex
lib/rdf_knife/: diff.ex
lib/sheaf/: admin.ex  application.ex  assistant.ex  blob_store.ex  block_previews.ex  block_refs.ex  block_tags.ex  corpus.ex  crossref.ex  datalab_jobs.ex  datalab_json.ex  docs.ex  document.ex  document_edits.ex  documents.ex  embedding.ex  env.ex  expert.ex  files.ex  fuseki.ex  google_docs_importer.ex  graph_migration.ex  graph_store.ex  id.ex  interviews.ex  llm.ex  metadata_resolver.ex  ns.ex  paper_import.ex  paper_metadata.ex  pdf.ex  prov.ex  quadlog_export.ex  readiness.ex  (+14 more)
priv/: sheaf-ext.ttl  sheaf-schema.ttl  thesis-text-1.txt
test/: datalab_test.exs  docs_test.exs  quadlog_test.exs  sheaf_test.exs
tools/: move-default-graph-to-workspace.sh
tools/rdfknife/: Cargo.toml
tools/rdfknife/src/: main.rs
(+205 files in other folders)
